Final Commit
Generated the latest html documentation file for all existing comments. The documentation html file is in 'public/docs/index.html'.
